--- a/main/templates/password.html
+++ b/main/templates/password.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>密碼</title>
 </head>
 
 <body>
     <h1>密碼為:{{password}}</h1>
-
+    <!-- <a href="/">回到首頁</a> -->
+    <a href="{% url 'index' %}">回到首頁</a>
 </body>
 
 </html>
